--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -10,7 +10,7 @@
   li:last-child:after
     content: ""
   li:nth-last-child(2):after
-    content: " and "
+    content: " a "
 
 .post-list
   padding: 0
